2002-07-02  Sven Wischnowsky  <wischnow@zsh.org>

	* 17393: Completion/Unix/Command/_chown,
	Completion/Unix/Type/_path_files: keep globbing quiet in
	_path_files; check if group/user exists in _chown

2002-07-01  Clint Adams  <clint@zsh.org>

	* 17391: Completion/Debian/Command/_dpkg: complete files after
	dpkg -S.

2002-07-01  Peter Stephenson  <pws@csr.com>

	* 17390: Src/Zle/zle_params.c, Src/Zle/zle_refresh.c,
	Doc/Zsh/zle.yo: $PREDISPLAY and $POSTDISPLAY are used to
	add text before and after the editable chunk of the zle buffer.

	* 17384: Src/Zle/zle_main.c, Src/Zle/iwidgets.list,
	Doc/Zsh/zle.yo: new `recursive-edit' widget allows a user-defined
	widget to pass control back to zle as a subcommand.

2002-07-01  Sven Wischnowsky  <wischnow@zsh.org>

	* 17387: Completion/Zsh/Context/.distfiles,
	Completion/Zsh/Context/_assign, Doc/Zsh/compsys.yo,
	Doc/Zsh/compwid.yo, Src/zsh.h, Src/Zle/compcore.c,
	Src/Zle/zle_tricky.c: add new sepcial context
	-assign-parameter- for completing the parameter in an
	assignment

2002-06-26  Bart Schaefer  <schaefer@zsh.org>

	* 17357: Src/mkbltnmlst.sh: predefine autoloads for zsh emulation
	mode only, not sh/ksh/etc. modes.

2002-06-26  Sven Wischnowsky  <wischnow@zsh.org>

	* 17366: Completion/Base/Core/_main_complete,
	Completion/Zsh/Command/_zstyle, Doc/Zsh/compsys.yo,
	Doc/Zsh/mod_complist.yo, Src/Zle/compcore.c, Src/Zle/complist.c,
	Src/Zle/compresult.c: two new modes for menu selection:
	incremental search and interactive

2002-06-24  Peter Stephenson  <pws@csr.com>

	* 17361: Src/zle_hist.c: Be safer about NULL returns from
	quietgethist() in case the history has been changed under our feet.

	* 17360: Src/zle_hist.c: Allow accept-line-and-down-history to
	accept the line even if there is no more history.

	* 17350: Src/zle_params.c, Doc/Zsh/zle.yo: Add $CUTBUFFER and
	$killring zle parameters.

2002-06-22  Bart Schaefer  <schaefer@zsh.org>

	* users/5073: Completion/compdump: use `typeset +f' instead of