@@ -1,3 +1,8 @@
+2002-07-03  Sven Wischnowsky  <wischnow@zsh.org>
+
+	* 17394: Src/Zle/complist.c: fix for interactive mode when menu
+	selection is called via the menu-select widget
+
 2002-07-02  Sven Wischnowsky  <wischnow@zsh.org>
 
 	* 17393: Completion/Unix/Command/_chown,
